force-app/main/default/objects/CI_Job_Baseline__c/CI_Job_Baseline__c.object-meta.xml
<CustomObject>
    <description>Custom Obj created to test the CI Job functionality.</description>
    <label>CI Job Baseline</label>
    <nameField>
        <label>CI Job Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CI Job Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>