force-app/main/default/objects/CI_Job_Baseline__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>